welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
	def positionFinale():Boolean = {
		if ((getX() == getMondeLargeur) && (getY() == getMondeHauteur)){
			return true
		}
		return false
	}
	var cpt = 0
	while (positionFinale == false){
		for (i <- 1 to getMondeLargeur-1){
			if (getY() == 6 % 5){
				ecritMessage()=cpt
				cpt=cpt+1
			}
			else {
				for (i <- 1 to getMondeHauteur-1)
				ecritMessage()=cpt
				cpt=cpt+1
				setPos(getX(), getY()+1)
				}
		}
	}
}
